<resources>
    <string name="app_name">Todos</string>
    <string name="login_button_title">Login</string>
    <string name="login_edit_text_hint">login</string>
    <string name="password_edit_text_hint">password</string>
    <string name="login_progress_dialog_message">Authenticating</string>
    <string name="sign_up_progress_dialog_message">Signing up</string>
    <string name="login_alert_title">Login Failed</string>
    <string name="dialog_ok_button_title">OK</string>
    <string name="dialog_cancel_button_title">Cancel</string>
    <string name="sign_up_button_title">sign up</string>
    <string name="app_title">todos</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="error_connection_failed">Connection Failed</string>
    <string name="email_edit_text_hint">email</string>
    <string name="first_name_edit_text_hint">first name</string>
    <string name="last_name_edit_text_hint">last name</string>
    <string name="confirm_password_edit_text_hint">confirm password</string>
    <string name="error_empty_edit_text">Please fill in all fields</string>
    <string name="sign_up_error">Sign up failed</string>
    <string name="error_passwords_equal">Passwords are not equal</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="email_confirmation_message">Please, check your email to continue registration</string>
    <string name="activity_todos_title">Todos</string>
    <string name="hint_title_todo">Title</string>
    <string name="hint_description_todo">Description</string>
    <string name="positive_button_create">Create</string>
    <string name="new_todo_message">New todo added</string>
    <string name="loading_dialog_message">Loading</string>

    <string name="menu_delete_title">Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete this task?</string>
    <string name="menu_logout_title">Log out</string>
    <string name="dialog_logout_message">Are you sure you want to log out?</string>
    <string name="todo_edited_message">Todo has been edited</string>
    <string name="todo_delete_message">Todo has been deleted</string>
    <string name="positive_button_restore">Restore</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="dialog_restore_title">Restoring password</string>
    <string name="dialog_restore_message">Check your email for recover your password</string>
    <string name="empty_state">There are no todos yet :(</string>
</resources>
